# rust_event

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: hello.rs  hello_bus.rs  hello_easy_bus.rs  hello_mybus.rs
src/: lib.rs
tests/: global.rs  global_but_no_use_event.rs  non_global.rs
