[package]
name = "rust_event"
version = "0.1.1"
edition = "2024"
authors = ["Inotart"]
description = "基于tokio制作的一个轻量化异步事件库"
license = "MIT"
repository = "https://github.com/Inotart/rust_event.git"
homepage = "https://github.com/Inotart/rust_event.git"
readme = "README.md"

[dependencies]
futures = "0.3.31"
lazy_static = "1.5.0"
tokio = { version = "1.47.1", features = ["full","rt-multi-thread"] }
inventory = "0.3"
once_cell = "1.21.3"
[dev-dependencies]
anyhow = "1.0.98"
